--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,22 +1,29 @@
 <%- include('header.ejs') %>
 
     <div class="box" id="heading">
-        <h1><%= listTitle %> !</h1>
+        <h1><%= listTitle %></h1>
     </div>
 
     <div class="box">
-        <% for(var i=0;i<items.length;i++){ %>
-            <div class="item">
-                <input type="checkbox" name="" id="">
-                <p>
-                    <%= items[i] %>
-                </p>
-            </div>
-            <% } %>
+
+        <form action="/delete" method="post">
+            
+            <% items.forEach((item) => { %>
+                <div class="item">
+                    <input type="checkbox" name="checkbox" value="<%= item._id %>" id="" onChange="this.form.submit()">
+                    <p name="item">
+                        <%= item.name %>
+                    </p>
+                </div>
+           <% });  %> 
+           <input type="hidden" id="custId" name="listName" value="<%= listTitle %>">
+        </form>
+
+            
             <!-- For each line that is not HTML, we have used scriplet tags <%  %> -->
         
             <form class="item" action="<%= postPath %>" method="post">
-                <input type="text" name="newTask" id="" placeholder="Enter New Task" autocomplete="off">
+                <input type="text" name="newItem" id="" placeholder="Enter New Task" autocomplete="off">
                 <button type="submit" name="button">+</button>
             </form>
     </div>
